Fixes UI bug in Card component, where cards on mobile were drawn too small

--- a/app/components/Card.module.css
+++ b/app/components/Card.module.css
@@ -14,8 +14,10 @@
 .link {
     text-decoration: none
 }
+
 .image {
-    width: 100%;
+    max-width: 100%;
+    min-width: 100%;
     aspect-ratio: 10/7.2;
     object-fit: cover;
 }
